--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ project/realtek_amebaD_va0_example/GCC-RELEASE/project_hp/toolchain/asdk/
 /**/EWARM-RELEASE/Debug/
 
 # flash tool
-tools/AmebaD/Image_Tool_Linux/mpp.ini
+#tools/AmebaD/Image_Tool_Linux/mpp.ini
 tools/AmebaD/Image_Tool_Linux/*.txt
 tools/AmebaD/Image_Tool_Linux/Image_All.bin
 
